syntax = "proto3";

package message_service;

option go_package = "github.com/Abelova-Grupa/Mercypher/message-service/external/messagepb";

// Message doesn't have an id before passing through MessageService
message ChatMessage {
  string sender_id = 1;
  string recipient_id = 2;
  string body = 3;
  int64 timestamp = 4;
}

message RelayResponse {
  int64 status = 1;
}

message MessageAck {
  string message_id = 1;
}

service MessageService {
  rpc SendMessage (ChatMessage) returns (MessageAck); 
  rpc RelayMessage (ChatMessage) returns (RelayResponse);
}
